kubernetes/deployment-appointment-scheduling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-scheduling-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appointment-scheduling
  template:
    metadata:
      labels:
        app: appointment-scheduling
    spec:
      containers:
      - name: appointment-scheduling
        image: 476658066203.dkr.ecr.ap-south-1.amazonaws.com/simple-docker-service-02ca41ab5897:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /readiness
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
