kubernetes/services-patient-records.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: patient-record-service
#spec:
#  selector:
#    app: patient-record
 # ports:
#    - protocol: TCP
 #     port: 80
 #     targetPort: 80
#  type: LoadBalancer
apiVersion: v1
kind: Service
metadata:
  name: patient-record-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb" # or "elb" for Classic LB
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing" # For public LB
spec:
  selector:
    app: patient-record
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
